--- a/PyTorch KR/pytorch_basic.ipynb
+++ b/PyTorch KR/pytorch_basic.ipynb
@@ -2737,7 +2737,7 @@
         "id": "D1Bg5HxsI0mu"
       },
       "source": [
-        "<img src = \"https://drive.google.com/uc?id=1LPA42uUuxMee_guT0gxJerAVsQikfEj9\" height = 300>"
+        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(1).jpg\" height=\"300\">"
       ]
     },
     {
@@ -3185,7 +3185,7 @@
         "id": "ghrTlpG3PFke"
       },
       "source": [
-        "<img src = \"https://drive.google.com/uc?id=1HUschRdqs-E5MU1PaUhJJiPQOV3BpiAP\" height = 300>"
+        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(2).jpeg\" height=\"300\">"
       ]
     },
     {
@@ -3885,7 +3885,7 @@
         "- `out_channels`: 출력 채널의 갯수\n",
         "- `kernel_size`: 커널(필터) 사이즈\n",
         "\n",
-        "<img src = \"https://drive.google.com/uc?id=1gZH2a3iPHYX40hV4wjjEzxcfU-PKHHIm\" height = 300>\n"
+        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(3).jpeg\" height=\"300\">"
       ]
     },
     {
