--- a/PyTorch KR/pytorch_basic.ipynb
+++ b/PyTorch KR/pytorch_basic.ipynb
@@ -2737,7 +2737,7 @@
         "id": "D1Bg5HxsI0mu"
       },
       "source": [
-        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(1).jpg\" height=\"300\">"
+        "![Image Description](https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(1).jpg)"
       ]
     },
     {
@@ -3185,7 +3185,7 @@
         "id": "ghrTlpG3PFke"
       },
       "source": [
-        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(2).jpeg\" height=\"300\">"
+        "![Image Description](https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(2).jpeg)"
       ]
     },
     {
@@ -3883,9 +3883,14 @@
         "\n",
         "- `in_channels`: channel의 갯수\n",
         "- `out_channels`: 출력 채널의 갯수\n",
-        "- `kernel_size`: 커널(필터) 사이즈\n",
-        "\n",
-        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(3).jpeg\" height=\"300\">"
+        "- `kernel_size`: 커널(필터) 사이즈"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![Image Description](https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(3).jpeg)"
       ]
     },
     {
