--- a/PyTorch KR/pytorch_basic.ipynb
+++ b/PyTorch KR/pytorch_basic.ipynb
@@ -2737,7 +2737,7 @@
         "id": "D1Bg5HxsI0mu"
       },
       "source": [
-        "![Image Description](https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(1).jpg)"
+        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(1).jpg\" height=\"300\">"
       ]
     },
     {
@@ -3185,7 +3185,7 @@
         "id": "ghrTlpG3PFke"
       },
       "source": [
-        "![Image Description](https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(2).jpeg)"
+        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(2).jpeg\" height=\"300\">"
       ]
     },
     {
@@ -3890,7 +3890,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "![Image Description](https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(3).jpeg)"
+        "<img src=\"https://github.com/ksouth0413/dltutorial/raw/main/PyTorch%20KR/photo/basic(3).jpeg\" height=\"300\">"
       ]
     },
     {
