--- a/PyTorch KR/pytorch_basic.ipynb
+++ b/PyTorch KR/pytorch_basic.ipynb
@@ -7775,7 +7775,11 @@
         "# X,y는 변화x\n",
         "# grad는 iter안에서만 변화, epoch가 변하면 다시 0으로 초기화되어서 다시 변화\n",
         "# weight는 매 iter마다, epoch마다 변한다.\n",
-        "# 즉, weight를 학습시킨다고 보면 된다."
+        "# 즉, weight를 학습시킨다고 보면 된다.\n",
+        "\n",
+        "# 하나의 batch안에 batchsize가 8이라 이미지가 8개인데, 이미지 8개를 어떻게 한번에 optimizer.step()으로 update하냐면\n",
+        "# 8개의 이미지가 병렬적으로 loss가 계산된다. 그 다음 역전파로 grad가 계산되고\n",
+        "# 이 grad의 평균으로 weight가 update되는 원리이다."
       ]
     },
     {
